--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
     <title>Vision Programming Tech | Home of Digital Skills</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <main>
+      <section class="hero-section">
+          
+      </section>
+    </main>
+  </body>
 </html>
