--- a/index.html
+++ b/index.html
@@ -11,7 +11,20 @@
   <body>
     <main>
       <section class="hero-section">
-
+        <div class="hero container">
+          <div class="hero-textbox">
+            <h1 class="heading-primary">
+              LEARN SOFTWARE DEVELOPMENT FROM INDUSTRY EXPERTS
+            </h1>
+            <p class="hero-description">
+              Take your professional skills to the next level and grow your
+              skill set with digital training from Vision Programming Tech!
+            </p>
+          </div>
+          <div class="hero-imgbox">
+            <img class="hero-img" src="./img/hero-img.jpg" alt="Hero image" />
+          </div>
+        </div>
       </section>
     </main>
   </body>
