--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
               Take your professional skills to the next level and grow your
               skill set with digital training from Vision Programming Tech!
             </p>
+            <div class="hero-cta">
+              <a href="#" class="btn btn--full">Hire Us</a
+              ><a href="#" class="btn btn--outline">Learn with us</a>
+            </div>
           </div>
           <div class="hero-imgbox">
             <img class="hero-img" src="./img/hero-img.jpg" alt="Hero image" />
