--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
         </div>
       </section>
     </main>
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
   </body>
 </html>
