--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <main>
+        <!-- Hero Section -->
       <section class="hero-section">
         <div class="hero container">
           <div class="hero-textbox">
@@ -30,6 +31,7 @@
           </div>
         </div>
       </section>
+      <!-- End of hero section -->
     </main>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
   </body>
