--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
         </div>
       </section>
       <!-- End of hero section -->
+
+      <!-- Showcase Section -->
+      <section class="showcase-section">
+          
+      </section>
+      <!-- End of showcase section -->
     </main>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
   </body>
