--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <main>
-        <!-- Hero Section -->
+      <!-- Hero Section -->
       <section class="hero-section">
         <div class="hero container">
           <div class="hero-textbox">
@@ -19,7 +19,8 @@
             </h1>
             <p class="hero-description">
               Take your professional skills to the next level and grow your
-              skill set with digital training from Vision Programming Tech!
+              skill set with digital training from
+              <span class="hero-name">Vision Programming Tech! </span>
             </p>
             <div class="hero-cta">
               <a href="#" class="btn btn--full">Hire Us</a
@@ -34,9 +35,7 @@
       <!-- End of hero section -->
 
       <!-- Showcase Section -->
-      <section class="showcase-section">
-          
-      </section>
+      <section class="showcase-section"></section>
       <!-- End of showcase section -->
     </main>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
