--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <header class="header">
+      <img
+        src="./img/vpt-logo.jpeg"
+        alt="Vision Programming Tech Logo"
+        class="logo"
+      />
+      <nav class="main-nav">
+        <ul class="main-nav-list">
+          <li>
+            <a href="#" class="main-nav-link">Item</a
+            ><a href="#" class="main-nav-link">Item</a
+            ><a href="#" class="main-nav-link">Item</a
+            ><a href="#" class="main-nav-link">Item</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
     <main>
       <!-- Hero Section -->
       <section class="hero-section">
@@ -35,7 +52,27 @@
       <!-- End of hero section -->
 
       <!-- Showcase Section -->
-      <section class="showcase-section"></section>
+      <section class="showcase-section">
+        <div class="container">
+          <div class="showcase-textbox">
+            <h2 class="heading-secondary">
+              Achieve Your Goals with Vision Programming Tech
+            </h2>
+            <p class="showcase-text">
+              Build your skills and grow business with digital training courses
+              from world-class industry experts. Vision Programming Tech has top
+              instructors to deliver real results.
+            </p>
+          </div>
+
+          <div class="grid grid-4-col">
+            <div>a</div>
+            <div>a</div>
+            <div>a</div>
+            <div>a</div>
+          </div>
+        </div>
+      </section>
       <!-- End of showcase section -->
     </main>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
