--- a/index.html
+++ b/index.html
@@ -18,10 +18,19 @@
       <nav class="main-nav">
         <ul class="main-nav-list">
           <li>
-            <a href="#" class="main-nav-link">Item</a
-            ><a href="#" class="main-nav-link">Item</a
-            ><a href="#" class="main-nav-link">Item</a
-            ><a href="#" class="main-nav-link">Item</a>
+            <a href="#" class="main-nav-link">Home</a>
+          </li>
+          <li>
+            <a href="#" class="main-nav-link">About Us</a>
+          </li>
+          <li>
+            <a href="#" class="main-nav-link">Our Courses</a>
+          </li>
+          <li>
+            <a href="#" class="main-nav-link">Testimonials</a>
+          </li>
+          <li>
+            <a href="#" class="main-nav-link nav-cta">Learn with us</a>
           </li>
         </ul>
       </nav>
