--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <!-- Header -->
     <header class="header">
       <img
         src="./img/vpt-logo.jpeg"
@@ -35,6 +36,7 @@
         </ul>
       </nav>
     </header>
+    <!-- End of header -->
     <main>
       <!-- Hero Section -->
       <section class="hero-section">
@@ -63,22 +65,46 @@
       <!-- Showcase Section -->
       <section class="showcase-section">
         <div class="container">
-          <div class="showcase-textbox">
+          <div class="showcase-textbox md-container">
             <h2 class="heading-secondary">
               Achieve Your Goals with Vision Programming Tech
             </h2>
             <p class="showcase-text">
-              Build your skills and grow business with digital training courses
-              from world-class industry experts. Vision Programming Tech has top
-              instructors to deliver real results.
+              Learn from world-class industry experts. Vision Programming Tech
+              <br />
+              has top instructors to deliver real results.
             </p>
           </div>
 
-          <div class="grid grid-4-col">
-            <div>a</div>
-            <div>a</div>
-            <div>a</div>
-            <div>a</div>
+          <div class="grid grid-4-col cards">
+            <div class="card">
+              <h3 class="heading-tertiary">Pick a course</h3>
+              <p>
+                Start a digital training course of your choice for professional
+                development .
+              </p>
+            </div>
+            <div class="card">
+              <h3 class="heading-tertiary">Pick a course</h3>
+              <p>
+                Start a digital training course of your choice for professional
+                development .
+              </p>
+            </div>
+            <div class="card">
+              <h3 class="heading-tertiary">Pick a course</h3>
+              <p>
+                Start a digital training course of your choice for professional
+                development .
+              </p>
+            </div>
+            <div class="card">
+              <h3 class="heading-tertiary">Pick a course</h3>
+              <p>
+                Start a digital training course of your choice for professional
+                development .
+              </p>
+            </div>
           </div>
         </div>
       </section>
