--- a/index.html
+++ b/index.html
@@ -79,30 +79,29 @@
           <div class="grid grid-4-col cards">
             <div class="card">
               <h3 class="heading-tertiary">Pick a course</h3>
-              <p>
+              <p class="card-text">
                 Start a digital training course of your choice for professional
                 development .
               </p>
             </div>
             <div class="card">
-              <h3 class="heading-tertiary">Pick a course</h3>
-              <p>
-                Start a digital training course of your choice for professional
-                development .
+              <h3 class="heading-tertiary">Learn by doing</h3>
+              <p class="card-text">
+                You will get 100 % hands-on practical learning , real-world
+                projects and exercises that lead to real skills mastery.
               </p>
             </div>
             <div class="card">
-              <h3 class="heading-tertiary">Pick a course</h3>
-              <p>
-                Start a digital training course of your choice for professional
-                development .
+              <h3 class="heading-tertiary">Real time support</h3>
+              <p class="card-text">
+                Free support from real industry experts after the completion of
+                courses for months .
               </p>
             </div>
             <div class="card">
-              <h3 class="heading-tertiary">Pick a course</h3>
-              <p>
-                Start a digital training course of your choice for professional
-                development .
+              <h3 class="heading-tertiary">Earn a certificate</h3>
+              <p class="card-text">
+                Show your Certificate to the world and level up your career.
               </p>
             </div>
           </div>
