--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 
           <div class="grid grid-4-col cards">
             <div class="card">
+              <ion-icon class="card-icon" name="book-outline"></ion-icon>
               <h3 class="heading-tertiary">Pick a course</h3>
               <p class="card-text">
                 Start a digital training course of your choice for professional
@@ -85,6 +86,7 @@
               </p>
             </div>
             <div class="card">
+              <ion-icon class="card-icon" name="duplicate-outline"></ion-icon>
               <h3 class="heading-tertiary">Learn by doing</h3>
               <p class="card-text">
                 You will get 100 % hands-on practical learning , real-world
@@ -92,6 +94,7 @@
               </p>
             </div>
             <div class="card">
+              <ion-icon class="card-icon" name="time-outline"></ion-icon>
               <h3 class="heading-tertiary">Real time support</h3>
               <p class="card-text">
                 Free support from real industry experts after the completion of
@@ -99,6 +102,7 @@
               </p>
             </div>
             <div class="card">
+              <ion-icon class="card-icon" name="bag-check-outline"></ion-icon>
               <h3 class="heading-tertiary">Earn a certificate</h3>
               <p class="card-text">
                 Show your Certificate to the world and level up your career.
