--- a/index.html
+++ b/index.html
@@ -112,6 +112,12 @@
         </div>
       </section>
       <!-- End of showcase section -->
+
+      <!-- Courses section -->
+      <section class="courses-section">
+          
+      </section>
+      <!-- End of courses section -->
     </main>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
   </body>
