--- a/index.html
+++ b/index.html
@@ -115,7 +115,12 @@
 
       <!-- Courses section -->
       <section class="courses-section">
-          
+        <div class="container">
+          <div class="courses-textbox">
+            <h2 class="heading-secondary">Our Classes</h2>
+            <p class="text-description"></p>
+          </div>
+        </div>
       </section>
       <!-- End of courses section -->
     </main>
