--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="card">
               <ion-icon class="card-icon" name="book-outline"></ion-icon>
               <h3 class="heading-tertiary">Pick a course</h3>
-              <p class="card-text">
+              <p class="text-description">
                 Start a digital training course of your choice for professional
                 development .
               </p>
@@ -88,7 +88,7 @@
             <div class="card">
               <ion-icon class="card-icon" name="duplicate-outline"></ion-icon>
               <h3 class="heading-tertiary">Learn by doing</h3>
-              <p class="card-text">
+              <p class="text-description">
                 You will get 100 % hands-on practical learning , real-world
                 projects and exercises that lead to real skills mastery.
               </p>
@@ -96,7 +96,7 @@
             <div class="card">
               <ion-icon class="card-icon" name="time-outline"></ion-icon>
               <h3 class="heading-tertiary">Real time support</h3>
-              <p class="card-text">
+              <p class="text-description">
                 Free support from real industry experts after the completion of
                 courses for months .
               </p>
@@ -104,7 +104,7 @@
             <div class="card">
               <ion-icon class="card-icon" name="bag-check-outline"></ion-icon>
               <h3 class="heading-tertiary">Earn a certificate</h3>
-              <p class="card-text">
+              <p class="text-description">
                 Show your Certificate to the world and level up your career.
               </p>
             </div>
@@ -118,7 +118,7 @@
         <div class="container">
           <div class="courses-textbox">
             <h2 class="heading-secondary">Our Classes</h2>
-            <p class="text-description"></p>
+            <p class="text-description">Choose your learning path</p>
           </div>
         </div>
       </section>
