--- a/index.html
+++ b/index.html
@@ -117,8 +117,11 @@
       <section class="courses-section">
         <div class="container">
           <div class="courses-textbox">
-            <h2 class="heading-secondary">Our Classes</h2>
-            <p class="text-description">Choose your learning path</p>
+            <p class="sub-heading">Our Classes</p>
+            <h2 class="heading-tertiary">
+              Ever wanted to learn a new skill that is IT oriented? Choose your
+              learning path
+            </h2>
           </div>
         </div>
       </section>
