--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vision Programming Tech | Home of Digital Skills</title>
+    <title>Vision Programming Tech | Home of Software Development</title>
     <link rel="stylesheet" href="./css/general.css" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
@@ -123,6 +123,8 @@
               learning path
             </h2>
           </div>
+
+          
         </div>
       </section>
       <!-- End of courses section -->
