--- a/index.html
+++ b/index.html
@@ -124,7 +124,52 @@
             </h2>
           </div>
 
-          
+          <div class="courses grid grid-4-col">
+            <div class="course">
+              <img
+                class="course-img"
+                src="./img/web-dev.svg"
+                alt="Web dev vector"
+              />
+              <div class="course-description">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Reprehenderit veniam modi sapiente, natus dolores ex.
+              </div>
+            </div>
+            <div class="course">
+              <img
+                class="course-img"
+                src="./img/mobile-dev.svg"
+                alt="Mobile dev vector"
+              />
+              <div class="course-description">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Reprehenderit veniam modi sapiente, natus dolores ex.
+              </div>
+            </div>
+            <div class="course">
+              <img
+                class="course-img"
+                src="./img/ui-ux.svg"
+                alt="UI/UX vector"
+              />
+              <div class="course-description">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Reprehenderit veniam modi sapiente, natus dolores ex.
+              </div>
+            </div>
+            <div class="course">
+              <img
+                class="course-img"
+                src="./img/database.svg"
+                alt="Database vector"
+              />
+              <div class="course-description">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Reprehenderit veniam modi sapiente, natus dolores ex.
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <!-- End of courses section -->
