--- a/index.html
+++ b/index.html
@@ -125,50 +125,62 @@
           </div>
 
           <div class="courses grid grid-4-col">
-            <div class="course">
+            <figure class="course">
               <img
                 class="course-img"
                 src="./img/web-dev.svg"
                 alt="Web dev vector"
               />
-              <div class="course-description">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Reprehenderit veniam modi sapiente, natus dolores ex.
-              </div>
-            </div>
-            <div class="course">
+              <blockquote class="course-description">
+                <h3 class="heading-tertiary">Web Development</h3>
+                <p class="text-description">
+                  Full Stack web development Nano Degree Course.
+                </p>
+                <a href="#" class="btn btn--full course-cta">Enroll</a>
+              </blockquote>
+            </figure>
+            <figure class="course">
               <img
                 class="course-img"
                 src="./img/mobile-dev.svg"
                 alt="Mobile dev vector"
               />
-              <div class="course-description">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Reprehenderit veniam modi sapiente, natus dolores ex.
-              </div>
-            </div>
-            <div class="course">
+              <blockquote class="course-description">
+                <h3 class="heading-tertiary">App Development</h3>
+                <p class="text-description">
+                  Full Stack app development Nano Degree Course.
+                </p>
+                <a href="#" class="course-cta btn btn--full">Enroll</a>
+              </blockquote>
+            </figure>
+            <figure class="course">
               <img
                 class="course-img"
                 src="./img/ui-ux.svg"
                 alt="UI/UX vector"
               />
-              <div class="course-description">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Reprehenderit veniam modi sapiente, natus dolores ex.
-              </div>
-            </div>
-            <div class="course">
+              <blockquote class="course-description">
+                <h2 class="heading-tertiary">UI/UX</h2>
+                <p class="text-description">
+                  Learn in depth the art of UI/UX design
+                </p>
+                <a href="#" class="course-cta btn btn--full">Enroll</a>
+              </blockquote>
+            </figure>
+            <figure class="course">
               <img
                 class="course-img"
                 src="./img/database.svg"
                 alt="Database vector"
               />
-              <div class="course-description">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Reprehenderit veniam modi sapiente, natus dolores ex.
-              </div>
-            </div>
+              <blockquote class="course-description">
+                <h3 class="heading-tertiary">DB Management</h3>
+                <p class="text-description">
+                  Learn in depth the art of UI/UX design
+                </p>
+                <a href="#" class="course-cta btn btn--full">Enroll</a>
+              </blockquote>
+            </figure>
           </div>
         </div>
       </section>
