--- a/index.html
+++ b/index.html
@@ -138,6 +138,16 @@
                 </p>
                 <a href="#" class="btn btn--full course-cta">Enroll</a>
               </blockquote>
+
+              <div class="outcome">
+                <h3 class="heading-tertiary">What you'll learn</h3>
+                <ul class="outcome-list">
+                  <li class="outcome-item">
+                    You will build 16 web development projects for your
+                    portfolio, ready to apply for junior developer jobs.
+                  </li>
+                </ul>
+              </div>
             </figure>
             <figure class="course">
               <img
