--- a/index.html
+++ b/index.html
@@ -146,6 +146,20 @@
                     You will build 16 web development projects for your
                     portfolio, ready to apply for junior developer jobs.
                   </li>
+                  <li class="outcome-item">
+                    You will master both front and back-end development,
+                    becoming a full-stack developer by the end of the course.
+                  </li>
+                  <li class="outcome-item">
+                    Build fully-fledged websites and web apps for your startup
+                    or business.
+                  </li>
+                  <li class="outcome-item">Learn professional developer best practices.</li>
+                  <li class="outcome-item">
+                    You will learn the latest technologies, including
+                    Javascript, React, Node and even Web3 development.
+                  </li>
+                  <li class="outcome-item">Work as a freelance web developer.</li>
                 </ul>
               </div>
             </figure>
