--- a/index.html
+++ b/index.html
@@ -143,23 +143,33 @@
                 <h3 class="heading-tertiary">What you'll learn</h3>
                 <ul class="outcome-list">
                   <li class="outcome-item">
-                    You will build 16 web development projects for your
-                    portfolio, ready to apply for junior developer jobs.
+                    <span class="list-icon">-</span>
+                    You will build 16 web projects for your portfolio, ready to
+                    apply for junior developer jobs.
                   </li>
                   <li class="outcome-item">
+                    <span class="list-icon">-</span>
                     You will master both front and back-end development,
                     becoming a full-stack developer by the end of the course.
                   </li>
                   <li class="outcome-item">
+                    <span class="list-icon">-</span>
                     Build fully-fledged websites and web apps for your startup
                     or business.
                   </li>
-                  <li class="outcome-item">Learn professional developer best practices.</li>
                   <li class="outcome-item">
-                    You will learn the latest technologies, including
-                    Javascript, React, Node and even Web3 development.
+                    <span class="list-icon">-</span>
+                    Learn professional developer best practices.
                   </li>
-                  <li class="outcome-item">Work as a freelance web developer.</li>
+                  <li class="outcome-item">
+                    <span class="list-icon">-</span>
+                    You will learn the latest technologies, including
+                    Javascript, React, Node.
+                  </li>
+                  <li class="outcome-item">
+                    <span class="list-icon">-</span>
+                    Work as a freelance web developer.
+                  </li>
                 </ul>
               </div>
             </figure>
