--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <a href="#" class="btn btn--full course-cta">Enroll</a>
               </blockquote>
 
-              <div class="outcome">
+              <div class="outcome outcome--right hidden">
                 <h3 class="heading-tertiary">What you'll learn</h3>
                 <ul class="outcome-list">
                   <li class="outcome-item">
@@ -186,6 +186,41 @@
                 </p>
                 <a href="#" class="course-cta btn btn--full">Enroll</a>
               </blockquote>
+              <div class="outcome outcome--right hidden">
+                <h3 class="heading-tertiary">What you'll learn</h3>
+                <ul class="outcome-list">
+                  <li class="outcome-item">
+                    <span class="list-icon">-</span>
+                    You will create a portfolio of 15 apps to be able apply for
+                    junior developer jobs at a technology company
+                  </li>
+                  <li class="outcome-item">
+                    <span class="list-icon">-</span>
+                    You will learn by doing, where every lesson is incorporated
+                    into a real-world app project.
+                  </li>
+                  <li class="outcome-item">
+                    <span class="list-icon">-</span>
+                    Master creating Augmented Reality apps using Apple’s new
+                    ARKit
+                  </li>
+                  <li class="outcome-item">
+                    <span class="list-icon">-</span>
+                    Master app design so you'll know how to wireframe, mockup
+                    and prototype your app idea
+                  </li>
+                  <li class="outcome-item">
+                    <span class="list-icon">-</span>
+                    After the course, you will be able to build any app you
+                    want.
+                  </li>
+                  <li class="outcome-item">
+                    <span class="list-icon">-</span>
+                    Become a digital nomad by working as a freelance iOS
+                    developer
+                  </li>
+                </ul>
+              </div>
             </figure>
             <figure class="course">
               <img
@@ -200,6 +235,41 @@
                 </p>
                 <a href="#" class="course-cta btn btn--full">Enroll</a>
               </blockquote>
+              <div class="outcome outcome--left hidden">
+                <h3 class="heading-tertiary">What you'll learn</h3>
+                <ul class="outcome-list">
+                  <li class="outcome-item">
+                    <span class="list-icon">-</span>
+                    What is UI-User Interface?<br>
+                    What is UX-User Experience?
+                  </li>
+                  <li class="outcome-item">
+                    <span class="list-icon">-</span>
+                    You will learn by doing, where every lesson is incorporated
+                    into a real-world app project.
+                  </li>
+                  <li class="outcome-item">
+                    <span class="list-icon">-</span>
+                    Master creating Augmented Reality apps using Apple’s new
+                    ARKit
+                  </li>
+                  <li class="outcome-item">
+                    <span class="list-icon">-</span>
+                    Master app design so you'll know how to wireframe, mockup
+                    and prototype your app idea
+                  </li>
+                  <li class="outcome-item">
+                    <span class="list-icon">-</span>
+                    After the course, you will be able to build any app you
+                    want.
+                  </li>
+                  <li class="outcome-item">
+                    <span class="list-icon">-</span>
+                    Become a digital nomad by working as a freelance iOS
+                    developer
+                  </li>
+                </ul>
+              </div>
             </figure>
             <figure class="course">
               <img
@@ -214,6 +284,7 @@
                 </p>
                 <a href="#" class="course-cta btn btn--full">Enroll</a>
               </blockquote>
+              
             </figure>
           </div>
         </div>
