--- a/index.html
+++ b/index.html
@@ -284,7 +284,41 @@
                 </p>
                 <a href="#" class="course-cta btn btn--full">Enroll</a>
               </blockquote>
-              
+              <div class="outcome outcome--left">
+                <h3 class="heading-tertiary">What you'll learn</h3>
+                <ul class="outcome-list">
+                  <li class="outcome-item">
+                    <span class="list-icon">-</span>
+                    What is UI-User Interface?<br>
+                    What is UX-User Experience?
+                  </li>
+                  <li class="outcome-item">
+                    <span class="list-icon">-</span>
+                    You will learn by doing, where every lesson is incorporated
+                    into a real-world app project.
+                  </li>
+                  <li class="outcome-item">
+                    <span class="list-icon">-</span>
+                    Master creating Augmented Reality apps using Apple’s new
+                    ARKit
+                  </li>
+                  <li class="outcome-item">
+                    <span class="list-icon">-</span>
+                    Master app design so you'll know how to wireframe, mockup
+                    and prototype your app idea
+                  </li>
+                  <li class="outcome-item">
+                    <span class="list-icon">-</span>
+                    After the course, you will be able to build any app you
+                    want.
+                  </li>
+                  <li class="outcome-item">
+                    <span class="list-icon">-</span>
+                    Become a digital nomad by working as a freelance iOS
+                    developer
+                  </li>
+                </ul>
+              </div>
             </figure>
           </div>
         </div>
