--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 <ul class="outcome-list">
                   <li class="outcome-item">
                     <span class="list-icon">-</span>
-                    What is UI-User Interface?<br>
+                    What is UI-User Interface?<br />
                     What is UX-User Experience?
                   </li>
                   <li class="outcome-item">
@@ -280,7 +280,7 @@
               <blockquote class="course-description">
                 <h3 class="heading-tertiary">DB Management</h3>
                 <p class="text-description">
-                  Learn in depth the art of UI/UX design
+                  Learn in depth database management
                 </p>
                 <a href="#" class="course-cta btn btn--full">Enroll</a>
               </blockquote>
@@ -289,33 +289,31 @@
                 <ul class="outcome-list">
                   <li class="outcome-item">
                     <span class="list-icon">-</span>
-                    What is UI-User Interface?<br>
-                    What is UX-User Experience?
+                    Describe the fundamental elements of relational database
+                    management systems.
                   </li>
                   <li class="outcome-item">
                     <span class="list-icon">-</span>
-                    You will learn by doing, where every lesson is incorporated
-                    into a real-world app project.
+                    Design ER-models to represent simple database application
+                    scenarios
                   </li>
                   <li class="outcome-item">
                     <span class="list-icon">-</span>
-                    Master creating Augmented Reality apps using Apple’s new
-                    ARKit
+                    Concurrency control( from scratch to advance).
                   </li>
                   <li class="outcome-item">
                     <span class="list-icon">-</span>
-                    Master app design so you'll know how to wireframe, mockup
-                    and prototype your app idea
+                    Able to create complex SQL queries using multiple tables.
                   </li>
                   <li class="outcome-item">
                     <span class="list-icon">-</span>
-                    After the course, you will be able to build any app you
-                    want.
+                    Explain the basic concepts of relational data model,
+                    entity-relationship model, relational database design,
+                    relational algebra and SQL.
                   </li>
                   <li class="outcome-item">
                     <span class="list-icon">-</span>
-                    Become a digital nomad by working as a freelance iOS
-                    developer
+                    In-depth knowledge over database design or database engineer.
                   </li>
                 </ul>
               </div>
