--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       <section class="courses-section">
         <div class="container">
           <div class="courses-textbox">
-            <p class="sub-heading">Our Classes</p>
+            <p class="sub-heading">Our Courses</p>
             <h2 class="heading-tertiary">
               Ever wanted to learn a new skill that is IT oriented? Choose your
               learning path
@@ -284,7 +284,7 @@
                 </p>
                 <a href="#" class="course-cta btn btn--full">Enroll</a>
               </blockquote>
-              <div class="outcome outcome--left">
+              <div class="outcome outcome--left hidden">
                 <h3 class="heading-tertiary">What you'll learn</h3>
                 <ul class="outcome-list">
                   <li class="outcome-item">
@@ -313,7 +313,8 @@
                   </li>
                   <li class="outcome-item">
                     <span class="list-icon">-</span>
-                    In-depth knowledge over database design or database engineer.
+                    In-depth knowledge over database design or database
+                    engineer.
                   </li>
                 </ul>
               </div>
@@ -322,6 +323,9 @@
         </div>
       </section>
       <!-- End of courses section -->
+      <!-- Featured Section -->
+      <section class="featured-section"></section>
+      <!-- End of featured section -->
     </main>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
   </body>
