--- a/index.html
+++ b/index.html
@@ -328,5 +328,6 @@
       <!-- End of featured section -->
     </main>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
