--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="#" class="main-nav-link">About Us</a>
           </li>
           <li>
-            <a href="#" class="main-nav-link">Our Courses</a>
+            <a href="#courses" class="main-nav-link">Our Courses</a>
           </li>
           <li>
             <a href="#" class="main-nav-link">Testimonials</a>
@@ -114,7 +114,7 @@
       <!-- End of showcase section -->
 
       <!-- Courses section -->
-      <section class="courses-section">
+      <section class="courses-section" id="courses">
         <div class="container">
           <div class="courses-textbox">
             <p class="sub-heading">Our Courses</p>
@@ -323,9 +323,12 @@
         </div>
       </section>
       <!-- End of courses section -->
-      <!-- Featured Section -->
-      <section class="featured-section"></section>
-      <!-- End of featured section -->
+
+      <!-- Testimony Section -->
+      <section class="">
+
+      </section>
+      <!-- End of Testimony section -->
     </main>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <script src="./js/script.js"></script>
