--- a/index.html
+++ b/index.html
@@ -325,8 +325,10 @@
       <!-- End of courses section -->
 
       <!-- Testimony Section -->
-      <section class="">
-
+      <section class="testimonials-section">
+        <div class="container">
+          
+        </div>
       </section>
       <!-- End of Testimony section -->
     </main>
