--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <!-- Courses section -->
       <section class="courses-section" id="courses">
         <div class="container">
-          <div class="courses-textbox">
+          <div class="textbox">
             <p class="sub-heading">Our Courses</p>
             <h2 class="heading-tertiary">
               Ever wanted to learn a new skill that is IT oriented? Choose your
@@ -327,7 +327,12 @@
       <!-- Testimony Section -->
       <section class="testimonials-section">
         <div class="container">
-          
+          <div class="courses-textbox">
+            <p class="sub-heading">Our Students' Reviews</p>
+            <h2 class="heading-tertiary">
+              Lorem ipsum dolor, sit amet consectetur adipisicing.
+            </h2>
+          </div>
         </div>
       </section>
       <!-- End of Testimony section -->
