--- a/index.html
+++ b/index.html
@@ -327,11 +327,37 @@
       <!-- Testimony Section -->
       <section class="testimonials-section">
         <div class="container">
-          <div class="courses-textbox">
+          <div class="textbox">
             <p class="sub-heading">Our Students' Reviews</p>
             <h2 class="heading-tertiary">
               Lorem ipsum dolor, sit amet consectetur adipisicing.
             </h2>
+          </div>
+          <div class="testimonials-box grid grid-2-col">
+            <figure class="testimonial">
+              <div class="img-placeholder heading-secondary">KT</div>
+              <blockquote>
+                <p class="review text-description">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
+                  voluptatum, accusamus dolor corrupti harum temporibus aliquam
+                  molestiae voluptates distinctio maiores consequatur sequi
+                  fugit saepe consequuntur?
+                </p>
+                <p class="testimonial-name">&dash; Keshav T.</p>
+              </blockquote>
+            </figure>
+            <figure class="testimonial">
+              <div class="img-placeholder heading-secondary">KT</div>
+              <blockquote>
+                <p class="review text-description">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
+                  voluptatum, accusamus dolor corrupti harum temporibus aliquam
+                  molestiae voluptates distinctio maiores consequatur sequi
+                  fugit saepe consequuntur?
+                </p>
+                <p class="testimonial-name">&dash; Keshav T.</p>
+              </blockquote>
+            </figure>
           </div>
         </div>
       </section>
