--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
           </div>
           <div class="testimonials-box grid grid-2-col">
             <figure class="testimonial">
-              <div class="img-placeholder heading-secondary">KT</div>
+              <div class="img-placeholder heading-tertiary">KT</div>
               <blockquote>
                 <p class="review text-description">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
@@ -347,7 +347,7 @@
               </blockquote>
             </figure>
             <figure class="testimonial">
-              <div class="img-placeholder heading-secondary">KT</div>
+              <div class="img-placeholder heading-tertiary">KT</div>
               <blockquote>
                 <p class="review text-description">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
