--- a/index.html
+++ b/index.html
@@ -347,6 +347,19 @@
               </blockquote>
             </figure>
             <figure class="testimonial">
+              <div class="img-placeholder heading-tertiary">LR</div>
+              <blockquote>
+                <p class="review text-description">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
+                  voluptatum, accusamus dolor corrupti harum temporibus aliquam
+                  molestiae voluptates distinctio maiores consequatur sequi
+                  fugit saepe consequuntur?
+                </p>
+                <p class="testimonial-name">&dash; Luis Rodrigo I.</p>
+              </blockquote>
+            </figure>
+
+            <figure class="testimonial">
               <div class="img-placeholder heading-tertiary">KT</div>
               <blockquote>
                 <p class="review text-description">
@@ -356,6 +369,18 @@
                   fugit saepe consequuntur?
                 </p>
                 <p class="testimonial-name">&dash; Keshav T.</p>
+              </blockquote>
+            </figure>
+            <figure class="testimonial">
+              <div class="img-placeholder heading-tertiary">LR</div>
+              <blockquote>
+                <p class="review text-description">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
+                  voluptatum, accusamus dolor corrupti harum temporibus aliquam
+                  molestiae voluptates distinctio maiores consequatur sequi
+                  fugit saepe consequuntur?
+                </p>
+                <p class="testimonial-name">&dash; Luis Rodrigo I.</p>
               </blockquote>
             </figure>
           </div>
