--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
             </figure>
 
             <figure class="testimonial">
-              <div class="img-placeholder heading-tertiary">KT</div>
+              <div class="img-placeholder heading-tertiary">FK</div>
               <blockquote>
                 <p class="review text-description">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
@@ -368,11 +368,11 @@
                   molestiae voluptates distinctio maiores consequatur sequi
                   fugit saepe consequuntur?
                 </p>
-                <p class="testimonial-name">&dash; Keshav T.</p>
+                <p class="testimonial-name">&dash; Franscisco K.</p>
               </blockquote>
             </figure>
             <figure class="testimonial">
-              <div class="img-placeholder heading-tertiary">LR</div>
+              <div class="img-placeholder heading-tertiary">ET</div>
               <blockquote>
                 <p class="review text-description">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
@@ -380,7 +380,7 @@
                   molestiae voluptates distinctio maiores consequatur sequi
                   fugit saepe consequuntur?
                 </p>
-                <p class="testimonial-name">&dash; Luis Rodrigo I.</p>
+                <p class="testimonial-name">&dash; Emmanuel T.</p>
               </blockquote>
             </figure>
           </div>
